# decision-support-systems

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
include/: algorithm.h  enumeration.h  interval.h  piyavsky.h  strongin.h
qcustomplot/: CMakeLists.txt
sample/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  algorithm.cpp  enumeration.cpp  interval.cpp  piyavsky.cpp  strongin.cpp
